load("//:def.bzl", "cuda_copts")
load("//bazel:arch_select.bzl", "torch_deps", "select_py_bindings")

cc_library(
    name= "atex",
    srcs = ["kernels/fp16/rmsnorm.cu"],
    hdrs = [
        "kernels/fp16/rmsnorm.h",
        "copy/vec.h",
        "warp/reduce.cuh",
        "block/reduce.cuh",
        "common.cuh"
    ],
    deps = [
        "//rtp_llm/cpp/cuda:cuda_host_utils",
        "//rtp_llm/cpp/utils:core_utils",
    ] + torch_deps(),
    copts = cuda_copts(),
    visibility = ["//visibility:public"],
)
